Implemented missing domain actions within aggregates.